<resources>
    <string name="title_name_Login_activity">登录</string>
    <string name="title_home">首页</string>
    <string name="title_promo">优惠</string>
    <string name="title_transfer">转账</string>
    <string name="title_deposit">存款</string>
    <string name="title_service">客服</string>
    <string name="title_mine">我的</string>
    <string name="title_questions">常见问题</string>
    <string name="title_protocol">注册条款</string>
    <string name="title_about">关于我们</string>
    <string name="checkLine">正在检测线路，请稍后…</string>
    <string name="checkOk">检测完成，即将进入…</string>
    <string name="unNet">网络不可用，请检查网络设置</string>
    <string name="checking_line">正在检测线路:%1$s</string>
    <string name="checking_line_fail">线路检测失败:%1$s</string>
    <string name="checking_line_success">线路检测成功:%1$s</string>
    <string name="get_checking_line_fail">线路获取失败:%1$s</string>
    <string name="get_checking_line_success">线路获取成功:%1$s</string>
    <string name="get_checking_line_null">返回线路为空</string>
    <string name="stop_get_check_line">停止获取线路</string>
    <string name="logining">登录中...</string>
    <string name="needRealName">该账户需要手动登录，请手动登录~</string>
    <string name="username_hint">输入用户名</string>
    <string name="password_hint">输入密码</string>
    <string name="captcha_hint">请输入验证码</string>
    <string name="enter_captcha">请输入正确的验证码</string>
    <string name="username_validate">账号不能为空</string>
    <string name="password_validate">密码不能为空</string>
    <string name="captcha_validate">验证码格式有误</string>
    <string name="loginSoon">立即登录</string>
    <string name="noAccount">没有账号？</string>
    <string name="registerSoon">免费开户</string>
    <string name="loading_tip">加载中…</string>
    <string name="login_loading">登录中…</string>
    <string name="net_busy_error">服务忙，请稍后再试！</string>
    <string name="getCaptchaFail">获取验证码失败</string>
    <string name="your_real_name">您的真实姓名:</string>
    <string name="verification_name_hint">本次升级，加强了账户的安全防护体系，请验证真实姓名，验证通过后即可成功登录</string>
    <string name="real_name_error">真实姓名与账号不匹配</string>
    <string name="account_existence">账号已存在</string>
    <string name="verify_name_ok">验证成功</string>
    <string name="verify_name_error">验证失败</string>
    <string name="input_pasword_num_zm">0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIGKLMNOPQRSTUVWXYZ@,.</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="notice">公告</string>
    <string name="next_time">下次拆红包开始时间为</string>
    <string name="total_times">您还有&#160;%1$d&#160;次抽奖机会</string>
    <string name="rule_lable">游戏规则</string>
    <string name="hongbao_confirm">确定</string>
    <string name="hongbao_get_partten">获得%1$s元</string>
    <string name="hongbao_faile">还差一点就中奖了呦！</string>
    <string name="close_notice">关闭</string>
    <string name="hongbao_end">活动已结束</string>
    <string name="haobao_qiangguang">红包已抢光</string>
    <string name="haobao_times_0">抢红包次数已用完</string>
    <string name="haobao_next_time">下次再来吧</string>
    <string name="account_total_asset">总资产</string>
    <string name="account_wallet">钱包</string>
    <string name="account_one_key_back">一键回收</string>
    <string name="account_one_key_refersh">一键刷新</string>
    <string name="hongbao_get_null">获取红包数据失败,请刷新当前页面</string>
    <string name="login_first">请先登录</string>
    <string name="hongbao_snatched_out">红包已抢完</string>
    <string name="hongbao_condition_not_satisfied">红包条件不满足</string>
    <string name="hongbao_activity_end">红包活动结束</string>
    <string name="hongbao_excepttion">红包抽奖异常</string>
    <string name="hongbao_chou_wan">红包已抽完</string>
    <string name="hongbao_have_end">红包已结束</string>
    <string name="promo_all_selector_lable">所有优惠</string>
    <string name="join_right_now">立即加入</string>
    <string name="captal_record">资金记录</string>
    <string name="captal_record_tip">查看所有资金往来记录</string>
    <string name="security_center">安全中心</string>
    <string name="security_center_tip">保护您的账户安全</string>
    <string name="security_center_level_low">低</string>
    <string name="security_center_level_mid">中</string>
    <string name="security_center_level_high">高</string>
    <string name="concession_record">优惠记录</string>
    <string name="concession_record_tip">查看所参加的优惠记录</string>
    <string name="message_center">消息中心</string>
    <string name="message_center_tip">查看历史消息内容</string>
    <string name="share_friend">分享朋友</string>
    <string name="share_friend_tip">分享内容给朋友</string>
    <string name="aplication_for_preferential">申请优惠</string>
    <string name="aplication_for_preferential_tip">发送优惠申请优惠</string>
    <string name="see_more">查看更多</string>
    <string name="see_more_tip">建议反馈</string>
    <string name="total_asset">总资产/</string>
    <string name="total_asset_value_pattern">¥%1$2f</string>
    <string name="purse_balance_value_pattern">¥%1$2f</string>
    <string name="purse_balance">钱包余额/</string>
    <string name="last_login_time">上次登录时间:</string>
    <string name="recharge_money">充值</string>
    <string name="withdraw_label">提现</string>
    <string name="withdraw_label_pattern">处理中</string>
    <string name="note_record">投注记录</string>
    <string name="note_record_tip">查看所参与的游戏记录</string>
    <string name="quota_conversion">额度转换</string>
    <string name="quota_conversion_tip">进行资金回收和转入</string>
    <string name="promo_activity">优惠活动</string>
    <string name="url_null">请求链接为空</string>
    <string name="login_register">登录/注册</string>
    <string name="game_maintenance">正维护中...</string>
    <string name="url_is_null">传入地址为空！</string>
    <string name="imageUrlNil">图片地址为空</string>
    <string name="saveImgFailed">图片保存失败</string>
    <string name="saveImgSuccess">已保存到相册</string>
    <string name="is_end_page">已是最后一页</string>
    <string name="REFRESHING">正在刷新</string>
    <string name="RELEASE_TO_REFRESH">松开刷新</string>
    <string name="SWIPE_TO_REFRESH">点击刷新</string>
    <string name="REFRESH_RETURNING">刷新正在返回中</string>
    <string name="REFRESH_COMPLETE">刷新完成</string>
    <string name="LOADING_MORE">正在加载更多</string>
    <string name="RELEASE_TO_LOAD_MORE">松开加载更多</string>
    <string name="SWIPE_TO_LOAD_MORE">点击加载更多</string>
    <string name="LOAD_MORE_RETURNING">加载正在返回中</string>
    <string name="LOAD_MORE_COMPLETE">加载更多完成</string>
    <string name="NO_MORE_DATA">没有更多的数据</string>
    <string name="more_acitivity">更多</string>
    <string name="message_center_activity">消息中心</string>
    <string name="common_problems">常见问题</string>
    <string name="register_protocol">注册条款</string>
    <string name="about_us">关于我们</string>
    <string name="luanguage_choice">语言选择</string>
    <string name="setting_acitivity">设置</string>
    <string name="voice_setting">声音</string>
    <string name="logout_setting">退出登录</string>
    <string name="logout">退出</string>
    <string name="game_noitce">游戏公告</string>
    <string name="sys_notice">系统公告</string>
    <string name="sys_msg">系统消息</string>
    <string name="my_msg">我的消息</string>
    <string name="send_msg">发送消息</string>
    <string name="zhan_message">站点消息</string>
    <string name="please_choose">请选择</string>
    <string name="send_msg_title">标题:</string>
    <string name="send_msg_title_set">请输入标题</string>
    <string name="send_msg_content_set">请输入内容</string>
    <string name="emty_data">暂无数据</string>
    <string name="send_msg_upload">提交</string>
    <string name="send_msg_cancel">取消</string>
    <string name="site_msg_all_choose">全选</string>
    <string name="site_msg_delete">删除</string>
    <string name="site_msg_sign_read">标记已读</string>
    <string name="game_type">游戏类型</string>
    <string name="start_time_cant_greater_than_end_time">开始时间不能大于结束时间</string>
    <string name="end_time_cant_less_than_start_time">结束时间不能小于开始时间</string>
    <string name="function_to_be_continue">该功能待续</string>
    <string name="reply">回复</string>
    <string name="note_record_acitivity">投注记录</string>
    <string name="note_record_detail_activity">投注记录-详情</string>
    <string name="capital_record_acitivity">资金记录</string>
    <string name="capital_record_acitivity_detail">资金记录详情</string>
    <string name="promo_record_acitivity">优惠记录</string>
    <string name="note_date">投注日期</string>
    <string name="search">搜索</string>
    <string name="game_name">游戏名称</string>
    <string name="note_time">投注时间</string>
    <string name="note_account">投注额</string>
    <string name="payout">派彩</string>
    <string name="status">状态</string>
    <string name="note_count">总共%1$s笔</string>
    <string name="account_banlance">账户余额:%1$s</string>
    <string name="payout_reward">派彩奖金:%1$s</string>
    <string name="effective_betting">有效投注:%1$s</string>
    <string name="lottery_bonus">彩池奖金:%1$s</string>
    <string name="recharge_total">充值总额:%1$s</string>
    <string name="rakeback_total">返水总额:%1$s</string>
    <string name="favorable_total">优惠总额:%1$s</string>
    <string name="withdraw_total">提现总额:%1$s</string>
    <string name="total_account">合计:</string>
    <string name="fast_choose">快选</string>
    <string name="type_choose">类型:</string>
    <string name="all_type">全部类型</string>
    <string name="drawcash_dealwith">取款处理中:</string>
    <string name="transfer_dealwith">转账处理中:</string>
    <string name="no_data">暂无相关数据</string>
    <string name="capital_tsNo">交易号</string>
    <string name="capital_crateTime">创建时间</string>
    <string name="capital_tsWayName">描述</string>
    <string name="capital_transactionMoney">金额</string>
    <string name="capital_errReson">失败原因</string>
    <string name="rechargeAddress">交易地点</string>
    <string name="transferInto">转入</string>
    <string name="transferOut">转出</string>
    <string name="capital_realName">姓名:</string>
    <string name="rechargeAmount">存款金额:</string>
    <string name="transactionMoney">取款金额:</string>
    <string name="capital_deductFavorable">扣除优惠:</string>
    <string name="capital_poundage">手续费:</string>
    <string name="capital_poundage_cunKuan">返手续费:</string>
    <string name="capital_poundage_free">免手续费</string>
    <string name="administrativeFee">行政费用:</string>
    <string name="rechargeTotalAmount">实际到账:</string>
    <string name="rechargeTotalmoney">实际金额:</string>
    <string name="capital_statusName">状态:</string>
    <string name="capital_status">状态</string>
    <string name="name_security">亲爱的%1$s,</string>
    <string name="tip_security">您的帐号信息，正在享受全面的安全防护</string>
    <string name="modify_login_pwd">修改登录密码</string>
    <string name="modify_security_pwd">修改安全密码</string>
    <string name="set_security_pwd">设置安全密码</string>
    <string name="lock_screen_gisture">锁屏手势</string>
    <string name="bank_card">银行卡</string>
    <string name="btb_account">比特币钱包</string>
    <string name="modify">修改</string>
    <string name="setting">设置</string>
    <string name="old_pwd">当前密码</string>
    <string name="input_old_pwd">请输入当前密码</string>
    <string name="new_pwd">新密码</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="confrim_pwd">确认密码</string>
    <string name="action_success">操作成功</string>
    <string name="input_new_pwd_again">请再次输入新密码</string>
    <string name="input_cant_null">输入框不能为空</string>
    <string name="input_content_10">内容数不少于10字符</string>
    <string name="input_cotent_notnull">内容不能为空</string>
    <string name="input_title_notnull">标题不能为空</string>
    <string name="input_title_4">标题不能小于4个字符</string>
    <string name="input_type_notnull">类型不能为空</string>
    <string name="pwd_at_lest_six">密码至少六位</string>
    <string name="pwd_input_different">两次新密码输入不相同</string>
    <string name="real_name">真实姓名</string>
    <string name="check_real_name">请验证真实姓名</string>
    <string name="set_safe_name">设置安全密码</string>
    <string name="pwd">密码</string>
    <string name="bank_name">银行</string>
    <string name="real_name_hint">银行卡户名和真实姓名一致才能取款成功</string>
    <string name="please_select">请选择</string>
    <string name="card_number">卡号</string>
    <string name="input_card_hint">请输入卡号</string>
    <string name="open_account_bank">开户银行</string>
    <string name="open_account_bank_hint">如：河北唐山建设银行</string>
</resources>