<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:orientation="vertical">

    <com.dawoo.gamebox.view.view.HeaderView
        android:id="@+id/head_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_edit_hight"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/pwd"
            android:textColor="@color/text_color_gray_333333"
            android:textSize="@dimen/text_14_sp" />

        <EditText
            android:id="@+id/pwd_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:background="@color/transparent"
            android:gravity="center_vertical|end"
            android:hint="@string/set_safe_name"
            android:inputType="textPassword"
            android:digits="@string/input_pasword_num_zm"
            android:maxLength="20"
            android:textColor="@color/text_color_gray_333333"
            android:textSize="@dimen/text_12_sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/divider_modify" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_edit_hight"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/real_name"
            android:textColor="@color/text_color_gray_333333"
            android:textSize="@dimen/text_14_sp" />

        <EditText
            android:id="@+id/real_name_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:background="@color/transparent"
            android:gravity="center_vertical|end"
            android:hint="@string/check_real_name"
            android:maxLength="8"
            android:textColor="@color/text_color_gray_333333"
            android:textSize="@dimen/text_12_sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/divider_modify" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_edit_hight"
        android:background="@color/white"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/old_pwd"
            android:textColor="@color/text_color_gray_333333"
            android:textSize="@dimen/text_14_sp" />

        <EditText
            android:id="@+id/old_pwd_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:background="@color/transparent"
            android:gravity="center_vertical|end"
            android:hint="@string/input_old_pwd"
            android:inputType="textPassword"
            android:maxLength="20"
            android:textColor="@color/text_color_gray_333333"
            android:textSize="@dimen/text_12_sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/divider_modify" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_edit_hight"
        android:background="@color/white"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/new_pwd"
            android:textColor="@color/text_color_gray_333333"
            android:textSize="@dimen/text_14_sp" />

        <EditText
            android:id="@+id/new_pwd_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:background="@color/transparent"
            android:digits="@string/input_pasword_num_zm"
            android:gravity="center_vertical|end"
            android:hint="@string/input_new_pwd"
            android:inputType="textPassword"
            android:maxLength="6"
            android:textColor="@color/text_color_gray_333333"
            android:textSize="@dimen/text_12_sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/divider_modify" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_edit_hight"
        android:background="@color/white"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/confrim_pwd"
            android:textColor="@color/text_color_gray_333333"
            android:textSize="@dimen/text_14_sp" />

        <EditText
            android:id="@+id/confirm_pwd_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:background="@color/transparent"
            android:digits="@string/input_pasword_num_zm"
            android:gravity="center_vertical|end"
            android:hint="@string/input_new_pwd_again"
            android:inputType="textPassword"
            android:maxLength="6"
            android:textColor="@color/text_color_gray_333333"
            android:textSize="@dimen/text_12_sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_modify" />
    <!--验证码-->
    <RelativeLayout
        android:id="@+id/rlCaptcha"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_edit_hight"
        android:background="@color/white"
        android:visibility="gone">

        <EditText
            android:id="@+id/etCaptcha"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/iv3"
            android:background="@android:color/transparent"
            android:hint="@string/captcha_hint"
            android:maxLength="4"
            android:maxLines="1"
            android:textColor="@color/colorMain"
            android:textColorHint="@color/text_color_gray_333333"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/ivCaptcha"
            android:layout_width="80dp"
            android:layout_height="34dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_vertical_button_hight"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="32dp"
        android:background="@drawable/frament_home_one_key_back_corn_selector"
        android:text="@string/modify"
        android:textColor="@color/white"
        android:textSize="@dimen/text_14_sp" />

</LinearLayout>
